feat(auth): 招待トークン・パスワードリセット

--- a/docs/300_開発/321_Phase1-0_コア機能.md
+++ b/docs/300_開発/321_Phase1-0_コア機能.md
@@ -25,13 +25,14 @@
   - `PATCH /api/v1/employees/{id}`
   - 従業員とユーザーの紐付け
 - [ ] シフトテンプレート管理
+
   - `GET /api/v1/shift-templates`
   - `POST /api/v1/shift-templates`
   - `PATCH /api/v1/shift-templates/{id}`
 
 - [ ] 招待管理機能
   - `GET /api/v1/invitations`（招待一覧取得、フィルタリング・ページング対応）
-  - `POST /api/v1/invitations/bulk`（一括招待発行、CSV/Excelインポート対応）
+  - `POST /api/v1/invitations/bulk`（一括招待発行、CSV/Excel インポート対応）
   - `POST /api/v1/invitations/{id}/cancel`（招待取り消し）
   - `POST /api/v1/invitations/{id}/resend`（招待再送信）
   - `POST /api/v1/invitations/{id}/send-email`（招待メール送信）
@@ -54,12 +55,12 @@
 
 #### バックエンド
 
-- [ ] 打刻API
+- [ ] 打刻 API
   - `POST /api/v1/time-clock/events`
   - `type`: `in`, `out`, `break_in`, `break_out`
   - `source`: `web`, `mobile`, `ic_card`, `admin`（注: `ic_card`は将来対応、初期実装では`web`と`mobile`のみ）
   - `company_id`, `employee_id`は自動設定
-- [ ] 打刻履歴取得API
+- [ ] 打刻履歴取得 API
   - `GET /api/v1/time-clock/events`
   - クエリパラメータ：`start_date`, `end_date`, `type`
   - ページング対応
@@ -80,7 +81,7 @@
   - 打刻イベントから`t_time_records`を自動生成/更新
   - 労働時間の計算（法定内、残業、深夜、休憩）
   - シフトテンプレートとの照合
-- [ ] 日次集計API
+- [ ] 日次集計 API
   - `GET /api/v1/time-records`
   - クエリパラメータ：`start_date`, `end_date`
   - ページング対応
@@ -92,29 +93,29 @@
   - 日別の労働時間表示
   - 残業時間の表示
 
-## 3. APIエンドポイント
+## 3. API エンドポイント
 
-| メソッド | エンドポイント | 権限 | 説明 |
-| :--- | :--- | :--- | :--- |
-| GET | `/api/v1/companies/{id}` | System Admin | 会社設定取得 |
-| PATCH | `/api/v1/companies/{id}` | System Admin | 会社設定更新 |
-| GET | `/api/v1/groups` | Admin | グループ一覧取得 |
-| POST | `/api/v1/groups` | Admin | グループ作成 |
-| PATCH | `/api/v1/groups/{id}` | Admin | グループ更新 |
-| DELETE | `/api/v1/groups/{id}` | Admin | グループ削除 |
-| GET | `/api/v1/employees` | Admin | 従業員一覧取得 |
-| POST | `/api/v1/employees` | Admin | 従業員作成 |
-| PATCH | `/api/v1/employees/{id}` | Admin | 従業員更新 |
-| GET | `/api/v1/shift-templates` | Admin | シフトテンプレート一覧 |
-| POST | `/api/v1/shift-templates` | Admin | シフトテンプレート作成 |
-| GET | `/api/v1/invitations` | Admin | 招待一覧取得 |
-| POST | `/api/v1/invitations/bulk` | Admin | 一括招待発行 |
-| POST | `/api/v1/invitations/{id}/cancel` | Admin | 招待取り消し |
-| POST | `/api/v1/invitations/{id}/resend` | Admin | 招待再送信 |
-| POST | `/api/v1/invitations/{id}/send-email` | Admin | 招待メール送信 |
-| POST | `/api/v1/time-clock/events` | Employee | 打刻イベント作成 |
-| GET | `/api/v1/time-clock/events` | Employee | 打刻履歴取得 |
-| GET | `/api/v1/time-records` | Employee | 日次勤怠一覧取得 |
+| メソッド | エンドポイント                        | 権限         | 説明                   |
+| :------- | :------------------------------------ | :----------- | :--------------------- |
+| GET      | `/api/v1/companies/{id}`              | System Admin | 会社設定取得           |
+| PATCH    | `/api/v1/companies/{id}`              | System Admin | 会社設定更新           |
+| GET      | `/api/v1/groups`                      | Admin        | グループ一覧取得       |
+| POST     | `/api/v1/groups`                      | Admin        | グループ作成           |
+| PATCH    | `/api/v1/groups/{id}`                 | Admin        | グループ更新           |
+| DELETE   | `/api/v1/groups/{id}`                 | Admin        | グループ削除           |
+| GET      | `/api/v1/employees`                   | Admin        | 従業員一覧取得         |
+| POST     | `/api/v1/employees`                   | Admin        | 従業員作成             |
+| PATCH    | `/api/v1/employees/{id}`              | Admin        | 従業員更新             |
+| GET      | `/api/v1/shift-templates`             | Admin        | シフトテンプレート一覧 |
+| POST     | `/api/v1/shift-templates`             | Admin        | シフトテンプレート作成 |
+| GET      | `/api/v1/invitations`                 | Admin        | 招待一覧取得           |
+| POST     | `/api/v1/invitations/bulk`            | Admin        | 一括招待発行           |
+| POST     | `/api/v1/invitations/{id}/cancel`     | Admin        | 招待取り消し           |
+| POST     | `/api/v1/invitations/{id}/resend`     | Admin        | 招待再送信             |
+| POST     | `/api/v1/invitations/{id}/send-email` | Admin        | 招待メール送信         |
+| POST     | `/api/v1/time-clock/events`           | Employee     | 打刻イベント作成       |
+| GET      | `/api/v1/time-clock/events`           | Employee     | 打刻履歴取得           |
+| GET      | `/api/v1/time-records`                | Employee     | 日次勤怠一覧取得       |
 
 ## 4. テスト項目
 
@@ -152,11 +153,11 @@
 
 ## 6. 依存関係
 
-- Phase 0が完了していること（認証・認可基盤）
+- Phase 0 が完了していること（認証・認可基盤）
 - マスタデータが投入されていること（テスト用）
 
 ## 7. 参考ドキュメント
 
 - [開発順序](./300_概要.md): 開発フェーズの概要
-- [API仕様_勤怠](../200_詳細設計/231_API_勤怠.md): 勤怠管理APIの詳細仕様
-- [DB設計方針](../200_詳細設計/221_DB設計.md): マルチテナント、ソフト削除、監査列
+- [API 仕様\_勤怠](../200_詳細設計/231_API_勤怠.md): 勤怠管理 API の詳細仕様
+- [DB 設計方針](../200_詳細設計/221_DB設計.md): マルチテナント、ソフト削除、監査列
